--- a/index.css
+++ b/index.css
@@ -1,76 +1,111 @@
-@import url('https://fonts.googleapis.com/css2?family=Jost:wght@400;700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Courier+Prime&display=swap');
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Jost', sans-serif;
+    font-family: 'Courier Prime', monospace;
     outline: none;
-    color: #000000;
-}
-
-body{
-    /*background: linear-gradient(to right, #61b2f4, #2d00f7); */
-    background: #ffffff;
-
-}
-
-.navbar {
-    overflow: hidden;
-    background-color: rgb(0, 0, 0); 
-  }
-
-.navbar a {
-    float: left;
-    font-size: 16px;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
     text-decoration: none;
-  }
-.navbar a:hover {
-    background-color: #003cff;
-  }
+    color: #ffffff;
+}
+body {
+    background: #0d1117;
+}
+#navcon{
+    display: flex;  
+    width: 100%;
+    justify-content: center;
+    font-size: 27px;
+}
+.mainnav{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+    background: #161b22;
 
-.title{
-  display:flex;
-  background-color: #ffffff;
-  justify-content: center;
-  padding: 100px;
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    z-index: 1030;
 }
-.title h1{
-  font-size: 70px;
+.navbc {
+    width: 30%;
+    left: 0;
 }
+#navbar {
+    width: 70%;
+    float: right;
 
-.part1 {
-  background-color: #858585;
-  display: flex; 
 }
+.li {
+    width: fit-content;
+    margin-left: 15px;
+}
+.li a:hover {
+    color: #7a7a7a;
+}
+.ul {
+    display: flex;
+    text-align: right;
+    justify-content: right;
+    list-style-type: none;
+}
+#header {
+    margin-top: 120px;
+    padding-bottom: 100px;
+    padding: 50px;
+    justify-content: center;
+}
+.container-center {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.avatar{
+    width: 300px;
+    height: 300px;
+    margin-bottom: 48px;
+    margin-left: auto;
+    margin-right: auto;
 
-.part1 a {
-  color:#ffffff;
 }
-/*
+.linha{
+    height: 1px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    max-width: 300px;
+    margin-left: auto;
+    margin-right: auto;
+    opacity: 1;
+    border-width: 0.25rem;
+    color: #ffffff;
+    background-color: #ffffff;
+    overflow: hidden;
+    border-top-style: solid ;
+    border-top-color: #ffffff;
+}
+.name {
+    font-size: 60px;
+}
+.description {
+    font-size: 35px;
+}
+.link {
+    text-decoration: underline ;
+}
+.aviso {
+    color: #ff0000;
+    font-size: 30px;
+}
 footer {
     display: flex;
+    position: absolute;
     justify-content: center;
-    padding: 40px;
-    background-color: #ffffff;
-    color: #fff;
-
-}
-*/
-
-#footer {
-  display: flex;
-  position: absolute;
-  justify-content: center;
-/*  bottom: 0; */
-  width: 100%;
-  padding: 20px;
-  background-color: #000000;
-}
-
-#footer p,span,a {
-  color:#ffffff ;
-}
+    bottom: 0;
+    width: 100%;
+    padding: 20px;
+    background-color: #0d1117;
+  }
+/* #010409 */
