--- a/index.css
+++ b/index.css
@@ -103,7 +103,7 @@ footer {
     display: flex;
     position: absolute;
     justify-content: center;
-    bottom: 0;
+/*    bottom: 0; */
     width: 100%;
     padding: 20px;
     background-color: #0d1117;
