--- a/index.css
+++ b/index.css
@@ -92,6 +92,7 @@ body {
 }
 .description {
     font-size: 35px;
+    height: 90px;
 }
 .link {
     text-decoration: underline ;
@@ -106,6 +107,13 @@ body {
     height: 15px;
     color: #0d1117;
     border-color: #0d1117;
+}
+.midtex {
+    display: flex;
+    align-content: center;
+    margin-right: auto;
+    margin-left: auto;
+    position: relative;
 }
 
 footer {
