--- a/index.css
+++ b/index.css
@@ -108,13 +108,13 @@ body {
     color: #0d1117;
     border-color: #0d1117;
 }
-.midtex {
+/*.midtex {
     display: flex;
     align-content: center;
     margin-right: auto;
     margin-left: auto;
     position: relative;
-}
+}*/
 
 footer {
     display: flex;
